force-app/main/default/objects/MS_Team_Call_Schedule__c/MS_Team_Call_Schedule__c.object-meta.xml
<CustomObject>
    <description>Stores Microsoft Teams and Outlook meeting schedules created through Microsoft Graph.</description>
    <label>MS Team Call Schedule</label>
    <nameField>
        <displayFormat>MTC-{0000000}</displayFormat>
        <label>MS Team Call Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MS Team Call Schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>