force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Actual_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Actual_Duration_Seconds__c</fullName>
    <label>Actual Duration Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>