force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Allow_Meeting_Chat__c.field-meta.xml
<CustomField>
    <fullName>Allow_Meeting_Chat__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Meeting Chat</label>
    <type>Checkbox</type>
</CustomField>