force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Allow_New_Time_Proposals__c.field-meta.xml
<CustomField>
    <fullName>Allow_New_Time_Proposals__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow New Time Proposals</label>
    <type>Checkbox</type>
</CustomField>