force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Allow_Screen_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Screen_Sharing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Screen Sharing</label>
    <type>Checkbox</type>
</CustomField>