force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Attendance_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Report_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attendance Report ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>