force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Attendee_Emails__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Emails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attendee Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>