force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Body_HTML__c.field-meta.xml
<CustomField>
    <fullName>Body_HTML__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Body HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>