force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>