force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Cancelled_At__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled At</label>
    <type>DateTime</type>
</CustomField>