force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancelled By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cancelled Team Call Schedules</relationshipLabel>
    <relationshipName>CancelledTeamCallSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>