force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/CMO__c.field-meta.xml
<CustomField>
    <fullName>CMO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CMO_MS_Team_Call_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>