force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Deleted_At__c.field-meta.xml
<CustomField>
    <fullName>Deleted_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Microsoft Event Deleted At</label>
    <type>DateTime</type>
</CustomField>