force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Deleted_By__c.field-meta.xml
<CustomField>
    <fullName>Deleted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Microsoft Event Deleted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Deleted Microsoft Team Events</relationshipLabel>
    <relationshipName>DeletedMicrosoftTeamEvents</relationshipName>
    <type>Lookup</type>
</CustomField>