force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Deletion_Justification__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Justification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deletion Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>