force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Local end date/time exactly as submitted to Microsoft Graph.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date/Time</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>