force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Graph_Change_Key__c.field-meta.xml
<CustomField>
    <fullName>Graph_Change_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Microsoft Graph Change Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>