force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Graph_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Graph_Created_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Graph Created At</label>
    <type>DateTime</type>
</CustomField>