force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Graph_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Graph_Last_Modified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Microsoft Graph Last Modified</label>
    <type>DateTime</type>
</CustomField>