force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/INV__c.field-meta.xml
<CustomField>
    <fullName>INV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>INV_MS_Team_Call_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>