force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Is_Online_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Is_Online_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Online Meeting</label>
    <type>Checkbox</type>
</CustomField>