force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Last_Graph_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Graph_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Microsoft Graph Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>