force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Last_Synchronized_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Synchronized_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Synchronized At</label>
    <type>DateTime</type>
</CustomField>