force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Lobby_Required__c.field-meta.xml
<CustomField>
    <fullName>Lobby_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lobby Required</label>
    <type>Checkbox</type>
</CustomField>