force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Meeting_Access__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Access__c</fullName>
    <label>Meeting Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited People</fullName>
                <default>true</default>
                <label>Only invited people</label>
            </value>
            <value>
                <fullName>Organization</fullName>
                <label>People in my organization</label>
            </value>
            <value>
                <fullName>Anyone</fullName>
                <label>Anyone with the link</label>
            </value>
            <value>
                <fullName>Organization and Trusted</fullName>
                <label>My organization and trusted organizations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>