force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Meeting_Ended_At__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Ended_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Ended At</label>
    <type>DateTime</type>
</CustomField>