force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>