force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Microsoft_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Time_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Microsoft Time Zone</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>