force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Online_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Online_Meeting_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Teams Online Meeting ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>