force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Organizer_Email__c.field-meta.xml
<CustomField>
    <fullName>Organizer_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organizer Email</label>
    <type>Email</type>
</CustomField>