force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Organizer_Entra_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Organizer_Entra_User_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organizer Entra User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>