force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Recording_Requested__c.field-meta.xml
<CustomField>
    <fullName>Recording_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Recording Requested</label>
    <type>Checkbox</type>
</CustomField>