force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Reminder_Minutes_Before_Start__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Minutes_Before_Start__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Reminder Minutes Before Start</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>