force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Local start date/time exactly as submitted to Microsoft Graph.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date/Time</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>