force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Teams_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Teams_Channel_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Teams Channel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>