force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Teams_Join_URL__c.field-meta.xml
<CustomField>
    <fullName>Teams_Join_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Teams Join URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>