force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Teams_Meeting_Requested__c.field-meta.xml
<CustomField>
    <fullName>Teams_Meeting_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teams Meeting Requested</label>
    <type>Checkbox</type>
</CustomField>