force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Transcription_Requested__c.field-meta.xml
<CustomField>
    <fullName>Transcription_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transcription Requested</label>
    <type>Checkbox</type>
</CustomField>