force-app/main/default/objects/MS_Team_Call_Schedule__c/fields/Web_Link__c.field-meta.xml
<CustomField>
    <fullName>Web_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Microsoft Event Web Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>